# maxmode

./: .gitignore  README.md  alembic.ini  ios26-swipe.html  main.py  meal_ai.py  pyproject.toml  service-worker.js
db/: __init__.py  auth.py  config.py  migrations.py  models.py  security.py  session.py  sync.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
static/: manifest.json
static/css/: app.css
static/js/: app.js  bootstrap.mjs  head-init.js  sw-register.js
static/js/modules/: calories-utils.mjs  charts.mjs  data-utils.mjs  goal-flow.mjs  meal-utils.mjs  motion-utils.mjs  scroll-lock.mjs  slider-ui.mjs  storage.mjs  swipe-row.mjs
static/js/views/: calories-ui.mjs  dashboard-ui.mjs  profile-ui.mjs  weights-ui.mjs
templates/: base.html  calories.html  dashboard.html  offline.html  profile.html  weights.html
templates/partials/: calories_content.html  dashboard_content.html  profile_content.html  weights_content.html
tests/: test_auth_sync.py  test_meal_ai.py  test_routes.py
tests_frontend/: avatar-storage.test.mjs  calories-utils.test.mjs  data-utils.test.mjs  dom-helpers.mjs  goal-flow-dom.test.mjs  meal-utils.test.mjs  profile-auth-ui.test.mjs  storage-meals.test.mjs  storage-preferences.test.mjs  swipe-row-dom.test.mjs
